# blackboard

./: .gitignore  CMakeLists.txt  README.md
include/: Board.h  BoardCaretaker.h  BoardMemento.h  ColoredChar.cpp  ColoredChar.h  ConsoleProcessor.h  FileProcessor.h  ICommand.h  IFigure.h  ParseHelper.h
src/: main.cpp
src/Commands/: Draw.h  RequestShapesInfo.cpp  RequestShapesInfo.h
src/Figures/: Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Triangle.cpp  Triangle.h
src/Helper/: ColoredChar.cpp  ParseHelper.cpp
src/Memento/: Board.cpp  BoardCaretaker.cpp  BoardMemento.cpp
src/Processors/: ConsoleProcessor.cpp  FileProcessor.cpp  FileProcessor.h  ParseHelper.cpp
